--- a/view/register.html
+++ b/view/register.html
@@ -12,7 +12,7 @@
     <link href = "/css/register.css" rel = "stylesheet">
 </head>
 <body>
-<header>
+    <header>
         <div class="logo-serch">
         <div class="logo">
             <img src="/images/logo-mercado-liebre.svg" alt="no pudo cargar imagen">
@@ -26,6 +26,7 @@
             <div class="metodo"><i class="fa-solid fa-hand-holding-dollar" style="color: #000000;"></i> Comprá en cuotas y sin tarjeta de crédito </div>
         </div>
 </header>
+
 <section class="formulario">
     <form action="/" method="post">
         <label for="Nombre y apellido">Nombre y apellido</label>
@@ -62,7 +63,7 @@
         <input class="controles" type="password" name="confirm" id="confirmar contraseña">
 
         <button class="boton" type="submit">Enviar</button>
-        <button class="boton" type="reset">Borrar</button>
+        <button class="boton2" type="reset">Borrar</button>
 </form>
 </section>
 </body>
