--- a/view/login.html
+++ b/view/login.html
@@ -5,13 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href = "/css/register.css" rel = "stylesheet">
 </head>
 <body>
-    <form action="/" method="post">
-        <label for="Ingrese">Nombre de Usuario</label>
-        <input type="text" name="nombre" id="Ingrese">
-        <label for="Contraseña">Ingrese su contraseña</label>
-        <input type="password" name="contraseña" id="Contraseña">
-        <button type="submit">Enviar</button>
+    <header>
+        <div class="logo-serch">
+        <div class="logo">
+            <img src="/images/logo-mercado-liebre.svg" alt="no pudo cargar imagen">
+        </div>
+    <div class="buscador">
+            <span class = "search-bar"> Buscar productos, marcas </span>
+        <span class="lupa">
+            <i class="fa-solid fa-magnifying-glass"></i>
+        </span>
+    </div>
+            <div class="metodo"><i class="fa-solid fa-hand-holding-dollar" style="color: #000000;"></i> Comprá en cuotas y sin tarjeta de crédito </div>
+        </div>
+</header>
+    <section class="formulario">
+
+        <form action="/" method="post">
+        <input class="controles" type="text" name="nombre" id="Ingrese" placeholder="Nombre de Usuario">
+        <input class="controles"  type="password" name="contraseña" id="Contraseña" placeholder="Ingrese su contraseña">
+        <button class="boton" type="submit">Enviar</button>
+        </form>
+    </section>
 </body>
 </html>
