--- a/public/css/register.css
+++ b/public/css/register.css
@@ -44,24 +44,41 @@ header{
     width: 50%;
 }
 .formulario{
-    width: 80%;
+    width: 60%;
     padding: 30px;
     margin: auto;
 }
 .controles{
     width: 100%;
     padding: 10px;
-    border-radius: 4px;
+    border-radius: 5px;
+    margin-top: 10px;
     margin-bottom: 16px;
+    border: none;
 }
 .boton{
-    width: 100%;
+    width: 49%;
     margin-bottom: 10px;
-    color: black;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    background: white;
 }
 .boton2{
+    width: 49%;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    background: white;
+}
+.boton3{
     width: 100%;
-    color:black;
+    margin-bottom: 10px;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    background: white;
+    margin-top: 25px;
 }
 .boton:hover{
     background: #0022AA;
@@ -70,5 +87,14 @@ header{
 .boton2:hover{
     background: red;
     color: white;
+}
+.boton3:hover{
+    background: #0022AA;
+    color: white;
+}
+.radio{
+    display:flex;
+    justify-content: space-around;
+    margin: 5%;
 }
 
