--- a/view/home.html
+++ b/view/home.html
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-    <div class="logo-serch">
+    <section class="logo-serch">
     <div class="logo">
         <img src="/images/logo-mercado-liebre.svg" alt="no pudo cargar imagen">
     </div>
@@ -25,16 +25,16 @@
         <i class="fa-solid fa-magnifying-glass"></i>
     </span>
 </div>
-        <div class="metodo"><i class="fa-solid fa-hand-holding-dollar" style="color: #000000;"></i> Comprá en cuotas y sin tarjeta de crédito </div>
-    </div>
-    <nav>
-        <ul>
+        <div class="metodo"><i class="fa-solid fa-hand-holding-dollar"></i> Comprá en cuotas y sin tarjeta de crédito </div>
+    </section>
+    <nav class="navbar">
+        <ul class="enlaces">
             <li><a href="#">Ofertas</a></li>
             <li><a href="#">Tiendas Oficiales</a></li>
             <li><a href="#">Vender</a></li>
             <li><a href="#">Ayuda</a></li>
         </ul>
-        <ul>
+        <ul class="registro">
             <li><a href="/register">Creá tu cuenta <i class="fa-regular fa-id-card"></i></a></li>
             <li><a href="/login">Ingresá <i class="fa-solid fa-right-to-bracket"></i></a></li>
             <li><a href="#">Mis compras <i class="fa-solid fa-basket-shopping"></i></a></li>
@@ -157,27 +157,28 @@
     </main>
 
     <footer>
-        <section class="acomodando">
-        <span class="icon-footer">
+        <section>
+
             <i class="fa-solid fa-credit-card"></i>
-        </span>
             <h3>Pagá con tarjeta o en efectivo</h3>
             <p>Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta o efectivo en
                 puntos de pago. ¡Y siempre es seguro!</p>
-        <span class="icon-footer">
+        </section>
+        <section>
+
             <i class="fa-solid fa-gift"></i>
-        </span>
             <h3>Envío gratis desde $ 2.500</h3>
             <p>Solo por estar registrad@ en Mercado Liebre tenés envíos gratis en miles de
                 productos. Es un beneficio de Mercado Puntos.</p>
+        </section>
+        <section>
 
-        <span class="icon-footer">
             <i class="fa-solid fa-user-shield"></i>
-        </span>
             <h3>Seguridad, de principio a fin</h3>
             <p>¿No te gusta? ¡Devolvelo! En Mercado Liebre, no hay nada que no puedas hacer,
                 porque estás siempre protegid@.</p>
-            <br>
+        </section>
+        <section class="copy">
             <p>Copyright © 1999-2020 MercadoLiebre S.R.L.</p>
         </section>
     </footer>
