--- a/view/login.html
+++ b/view/login.html
@@ -31,7 +31,7 @@
         <form action="/" method="post">
         <input class="controles" type="text" name="nombre" id="Ingrese" placeholder="Nombre de Usuario">
         <input class="controles"  type="password" name="contraseña" id="Contraseña" placeholder="Ingrese su contraseña">
-        <button class="boton" type="submit">Enviar</button>
+        <button class="boton3" type="submit">Enviar</button>
         </form>
     </section>
 </body>
